Fix CI: download Caddy before tests, tolerate skipped setup in teardown
The integration test teardown used List.of over possibly-null backends
and threw an NPE when setUp was skipped; on CI the Caddy binary was
missing entirely, so the test task now depends on downloadCaddy and the
integration tests run everywhere instead of being skipped.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>